Improved the Swagger docs, makefile, README and testing the datadog
